--- a/fruitable/web/templates/cart.html
+++ b/fruitable/web/templates/cart.html
@@ -118,19 +118,19 @@
                                 <h1 class="display-6 mb-4">Cart <span class="fw-normal">Total</span></h1>
                                 <div class="d-flex justify-content-between mb-4">
                                     <h5 class="mb-0 me-4">Subtotal:</h5>
-                                    <p class="mb-0">Ksh.{{ total_price }}</p>
+                                    <p class="mb-0">Sh.{{ total_price }}</p>
                                 </div>
                                 <div class="d-flex justify-content-between">
                                     <h5 class="mb-0 me-4">Shipping</h5>
                                     <div class="">
-                                        <p class="mb-0">Flat rate: Ksh.{{ total_shipping_fee }}</p>
+                                        <p class="mb-0">Flat rate: Sh.{{ total_shipping_fee }}</p>
                                     </div>
                                 </div>
                                 <p class="mb-0 text-end">Shipping to Eldoret</p>
                             </div>
                             <div class="py-4 mb-4 border-top border-bottom d-flex justify-content-between">
                                 <h5 class="mb-0 ps-4 me-4">Total</h5>
-                                <p class="mb-0 pe-4">Ksh.{{ grand_total }}</p>
+                                <p class="mb-0 pe-4">Sh.{{ grand_total }}</p>
                             </div>
                             <a href="{% url 'checkout' %}" class="btn border-secondary rounded-pill px-4 py-3 text-primary text-uppercase mb-4 ms-4" type="button">Proceed Checkout</a>
                         </div>
