--- a/fruitable/web/templates/layout/footer.html
+++ b/fruitable/web/templates/layout/footer.html
@@ -30,8 +30,7 @@
           <div class="col-lg-3 col-md-6">
               <div class="footer-item">
                   <h4 class="text-light mb-3">Why People Like us!</h4>
-                  <p class="mb-4">typesetting, remaining essentially unchanged. It was 
-                      popularised in the 1960s with the like Aldus PageMaker including of Lorem Ipsum.</p>
+                  <p class="mb-4">Simply the best</p>
                   <a href="" class="btn border-secondary py-2 px-4 rounded-pill text-primary">Read More</a>
               </div>
           </div>
@@ -54,15 +53,14 @@
                   <a class="btn-link" href="">Shopping Cart</a>
                   <a class="btn-link" href="">Wishlist</a>
                   <a class="btn-link" href="">Order History</a>
-                  <a class="btn-link" href="">International Orders</a>
               </div>
           </div>
           <div class="col-lg-3 col-md-6">
               <div class="footer-item">
                   <h4 class="text-light mb-3">Contact</h4>
-                  <p>Address: 1429 Netus Rd, NY 48247</p>
-                  <p>Email: Example@gmail.com</p>
-                  <p>Phone: +0123 4567 8910</p>
+                  <p>Address: London Estate, Narok</p>
+                  <p>Email: fruitables@gmail.com</p>
+                  <p>Phone: +254797 969 664</p>
                   <p>Payment Accepted</p>
                   <img src="{% static 'img/payment.png' %}" class="img-fluid" alt="">
               </div>
