--- a/fruitable/web/templates/layout/footer.html
+++ b/fruitable/web/templates/layout/footer.html
@@ -10,12 +10,7 @@
                       <p class="text-secondary mb-0">Fresh products</p>
                   </a>
               </div>
-              <div class="col-lg-6">
-                  <div class="position-relative mx-auto">
-                      <input class="form-control border-0 w-100 py-3 px-4 rounded-pill" type="number" placeholder="Your Email">
-                      <button type="submit" class="btn btn-primary border-0 border-secondary py-3 px-4 position-absolute rounded-pill text-white" style="top: 0; right: 0;">Subscribe Now</button>
-                  </div>
-              </div>
+              {% include 'newsletter.html' %}
               <div class="col-lg-3">
                   <div class="d-flex justify-content-end pt-3">
                       <a class="btn  btn-outline-secondary me-2 btn-md-square rounded-circle" href=""><i class="fab fa-twitter"></i></a>
