--- a/fruitable/web/templates/layout/navbar.html
+++ b/fruitable/web/templates/layout/navbar.html
@@ -37,7 +37,7 @@
                       <i class="fa fa-shopping-cart fa-2x"></i>
                       <span class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1" style="top: -5px; left: 21px; height: 20px; min-width: 20px;">{{ cart_count }}</span>
                   </a>
-                  <a href="#" class="my-auto">
+                  <a href="{% url 'login' %}" class="my-auto">
                       <i class="fas fa-user fa-2x"></i>
                   </a>
               </div>
