--- a/fruitable/web/templates/cart.html
+++ b/fruitable/web/templates/cart.html
@@ -99,7 +99,7 @@
                             {% empty %}
                             <tr>
                                 <td colspan="6" class="text-center">
-                                    <p class="mt-4">Your cart is empty.</p><a href="{% url 'shop' %}">Shop Now</a>
+                                    <p class="mt-4"><i class="fas fa-shopping-cart"></i> Your cart is empty.</p><a href="{% url 'shop' %}" class="btn border-secondary rounded-pill px-4 py-3 text-primary"><i class="fas fa-arrow-left"></i> Continue Shopping</a>
                                 </td>
                             </tr>
                             {% endfor %}
